[package]
name = "weibo_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3.21"
once_cell = "1.12"
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.9", features = ["formatting", "parsing"] }
tokio = { version = "1.19", features = ["full"] }
